fix: ResourceName enumを削除して汎用ライブラリ化 [publish]
